--- a/leaflet/Base.lproj/Main.storyboard
+++ b/leaflet/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9Mp-I4-dRc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9Mp-I4-dRc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -248,6 +248,21 @@
                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="IhK-KS-yXm">
                                                 <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0CC-cc-aRe">
+                                                        <rect key="frame" x="490" y="10" width="60" height="60"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="60" id="01X-KS-wIx"/>
+                                                            <constraint firstAttribute="height" constant="60" id="Jsi-C1-z9k"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="0CC-cc-aRe" firstAttribute="top" secondItem="IhK-KS-yXm" secondAttribute="top" constant="10" id="6TF-LK-qZ3"/>
+                                                    <constraint firstAttribute="centerY" secondItem="0CC-cc-aRe" secondAttribute="centerY" id="HuJ-4o-fYZ"/>
+                                                    <constraint firstAttribute="trailing" secondItem="0CC-cc-aRe" secondAttribute="trailing" constant="50" id="M3A-d5-zxt"/>
+                                                    <constraint firstAttribute="bottom" secondItem="0CC-cc-aRe" secondAttribute="bottom" constant="10" id="e6E-Pc-z54"/>
+                                                </constraints>
                                             </view>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="80" id="FpK-TJ-myr"/>
@@ -265,6 +280,13 @@
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                         </textView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IX3-LD-P62">
+                                            <rect key="frame" x="250" y="144" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="ZdE-L9-jqw"/>
+                                                <constraint firstAttribute="height" constant="100" id="je6-Yk-sYm"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
@@ -275,8 +297,11 @@
                                         <constraint firstItem="82a-bs-Zdw" firstAttribute="leading" secondItem="33V-o1-bQF" secondAttribute="leading" id="Fha-P6-Ds0"/>
                                         <constraint firstAttribute="trailing" secondItem="82a-bs-Zdw" secondAttribute="trailing" id="GW1-gN-9FB"/>
                                         <constraint firstItem="5LU-Ea-e5V" firstAttribute="leading" secondItem="33V-o1-bQF" secondAttribute="leading" id="HJm-YP-5cf"/>
+                                        <constraint firstAttribute="centerX" secondItem="IX3-LD-P62" secondAttribute="centerX" id="VNL-xm-X0z"/>
+                                        <constraint firstItem="IX3-LD-P62" firstAttribute="top" secondItem="5LU-Ea-e5V" secondAttribute="bottom" constant="-136" id="Vdg-Hf-xQD"/>
                                         <constraint firstAttribute="trailing" secondItem="5LU-Ea-e5V" secondAttribute="trailing" id="XQo-RE-2nQ"/>
                                         <constraint firstItem="82a-bs-Zdw" firstAttribute="top" secondItem="5LU-Ea-e5V" secondAttribute="bottom" id="gLZ-5H-rEJ"/>
+                                        <constraint firstItem="82a-bs-Zdw" firstAttribute="top" secondItem="IX3-LD-P62" secondAttribute="bottom" constant="36" id="gnA-E0-DYu"/>
                                         <constraint firstAttribute="bottom" secondItem="82a-bs-Zdw" secondAttribute="bottom" id="ikQ-Ls-tyo"/>
                                         <constraint firstItem="5LU-Ea-e5V" firstAttribute="top" secondItem="33V-o1-bQF" secondAttribute="top" id="x7x-pp-br1"/>
                                     </constraints>
@@ -288,25 +313,48 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="poi" tableViewCell="owR-1k-1sl" id="vSm-VX-9M4">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1xV-Pu-hDN">
-                                                    <rect key="frame" x="8" y="0.0" width="112" height="79"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SdK-ed-ia5">
-                                                    <rect key="frame" x="138" y="15" width="342" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fB3-n9-5az">
-                                                    <rect key="frame" x="138" y="44" width="342" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ehA-of-V4o">
+                                                    <rect key="frame" x="20" y="0.0" width="560" height="69"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1xV-Pu-hDN">
+                                                            <rect key="frame" x="0.0" y="0.0" width="69" height="69"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SdK-ed-ia5">
+                                                            <rect key="frame" x="83" y="13" width="424" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fB3-n9-5az">
+                                                            <rect key="frame" x="83" y="36" width="432" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.1960784314" green="0.1960784314" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="1xV-Pu-hDN" firstAttribute="leading" secondItem="ehA-of-V4o" secondAttribute="leading" id="BhG-Lp-UZd"/>
+                                                        <constraint firstAttribute="bottom" secondItem="1xV-Pu-hDN" secondAttribute="bottom" id="Kmo-r9-cX4"/>
+                                                        <constraint firstAttribute="centerY" secondItem="1xV-Pu-hDN" secondAttribute="centerY" id="OcR-gn-qTS"/>
+                                                        <constraint firstItem="SdK-ed-ia5" firstAttribute="leading" secondItem="1xV-Pu-hDN" secondAttribute="trailing" constant="8" id="hoF-j0-d9D"/>
+                                                        <constraint firstItem="fB3-n9-5az" firstAttribute="leading" secondItem="1xV-Pu-hDN" secondAttribute="trailing" constant="8" id="kVj-7J-qgU"/>
+                                                        <constraint firstAttribute="height" secondItem="1xV-Pu-hDN" secondAttribute="height" id="qM2-lm-43K"/>
+                                                        <constraint firstItem="1xV-Pu-hDN" firstAttribute="top" secondItem="ehA-of-V4o" secondAttribute="top" id="rqJ-ZW-zZY"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.1960784314" green="0.1960784314" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="backgroundColor" name="controlHighlightColor" catalog="System" colorSpace="catalog"/>
+                                            <constraints>
+                                                <constraint firstItem="ehA-of-V4o" firstAttribute="top" secondItem="vSm-VX-9M4" secondAttribute="top" id="AIK-lb-u1n"/>
+                                                <constraint firstAttribute="bottom" secondItem="ehA-of-V4o" secondAttribute="bottom" constant="10" id="Ofa-ET-E8E"/>
+                                                <constraint firstItem="ehA-of-V4o" firstAttribute="leading" secondItem="vSm-VX-9M4" secondAttribute="leading" constant="20" id="qBG-Ml-Jad"/>
+                                                <constraint firstAttribute="trailing" secondItem="ehA-of-V4o" secondAttribute="trailing" constant="20" id="w8a-tu-rvp"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="cellContent" destination="ehA-of-V4o" id="4iW-in-1Ne"/>
+                                            <outlet property="contentView" destination="vSm-VX-9M4" id="Zhf-ab-lMN"/>
                                             <outlet property="locationAway" destination="fB3-n9-5az" id="ruG-1k-zf8"/>
                                             <outlet property="poiImage" destination="1xV-Pu-hDN" id="pEs-Ke-yRt"/>
                                             <outlet property="poiName" destination="SdK-ed-ia5" id="hVT-10-SuI"/>
@@ -331,9 +379,11 @@
                             <constraint firstItem="oSd-iU-RoS" firstAttribute="top" secondItem="P89-x0-c4s" secondAttribute="bottom" id="eIy-1A-sbl"/>
                             <constraint firstAttribute="trailing" secondItem="oSd-iU-RoS" secondAttribute="trailing" id="f1h-kG-0y6"/>
                             <constraint firstItem="A3w-mM-fj9" firstAttribute="top" secondItem="oSd-iU-RoS" secondAttribute="bottom" id="iE3-cd-Ppw"/>
+                            <constraint firstItem="oSd-iU-RoS" firstAttribute="top" secondItem="P89-x0-c4s" secondAttribute="bottom" id="ldH-C8-7Ls"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="ldH-C8-7Ls"/>
                                 <exclude reference="eCQ-S2-eyI"/>
                                 <exclude reference="iE3-cd-Ppw"/>
                             </mask>
@@ -347,14 +397,16 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="progressCircle" destination="0CC-cc-aRe" id="QB9-82-fHl"/>
                         <outlet property="storyDescription" destination="82a-bs-Zdw" id="reZ-dI-dSw"/>
+                        <outlet property="storyIcon" destination="IX3-LD-P62" id="U6o-lc-iXU"/>
                         <outlet property="tableView" destination="oSd-iU-RoS" id="4kt-bH-GhU"/>
                         <outlet property="topView" destination="pnz-t9-Jcu" id="axu-Tg-azk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aiC-7n-G5l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3165" y="3263"/>
+            <point key="canvasLocation" x="3159" y="3257"/>
         </scene>
         <!--Title-->
         <scene sceneID="ogS-l6-Nvs">
