--- a/leaflet/Base.lproj/Main.storyboard
+++ b/leaflet/Base.lproj/Main.storyboard
@@ -581,41 +581,30 @@
         <scene sceneID="1M1-QJ-LyN">
             <objects>
                 <tableViewController storyboardIdentifier="storyMenuView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="b3b-OK-GQ5" customClass="StoriesMenuViewController" customModule="leaflet" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="22" sectionFooterHeight="22" id="MyI-O2-dUf">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="22" sectionFooterHeight="22" id="MyI-O2-dUf">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="story" rowHeight="50" id="Cgr-b2-lIl" customClass="StoriesListViewCell" customModule="leaflet" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="story" id="Cgr-b2-lIl" customClass="StoriesListViewCell" customModule="leaflet" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" tableViewCell="Cgr-b2-lIl" id="We6-Ap-TLg">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2gG-xP-Y8C">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="49"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="99"/>
                                         </imageView>
-                                        <visualEffectView opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K1t-5p-O4a">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="49"/>
-                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Y2x-NF-fWb">
-                                                <rect key="frame" x="0.0" y="0.0" width="600" height="49"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            </view>
-                                            <blurEffect style="extraLight"/>
-                                        </visualEffectView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="2gG-xP-Y8C" firstAttribute="leading" secondItem="We6-Ap-TLg" secondAttribute="leading" id="16o-bk-BML"/>
                                         <constraint firstAttribute="trailing" secondItem="2gG-xP-Y8C" secondAttribute="trailing" id="6Zr-Xe-Egt"/>
+                                        <constraint firstAttribute="centerX" secondItem="2gG-xP-Y8C" secondAttribute="centerX" id="AIR-at-fah"/>
                                         <constraint firstItem="2gG-xP-Y8C" firstAttribute="top" secondItem="We6-Ap-TLg" secondAttribute="top" id="Bu0-YC-IQa"/>
-                                        <constraint firstItem="K1t-5p-O4a" firstAttribute="leading" secondItem="We6-Ap-TLg" secondAttribute="leading" id="Rso-4Y-Jh0"/>
-                                        <constraint firstItem="K1t-5p-O4a" firstAttribute="top" secondItem="We6-Ap-TLg" secondAttribute="top" id="Wcj-ra-KR1"/>
+                                        <constraint firstAttribute="centerY" secondItem="2gG-xP-Y8C" secondAttribute="centerY" id="Vmz-Cl-J3V"/>
                                         <constraint firstAttribute="bottom" secondItem="2gG-xP-Y8C" secondAttribute="bottom" id="g8G-wU-tUI"/>
-                                        <constraint firstAttribute="bottom" secondItem="K1t-5p-O4a" secondAttribute="bottom" id="lqq-mi-08b"/>
-                                        <constraint firstAttribute="trailing" secondItem="K1t-5p-O4a" secondAttribute="trailing" id="ya8-vL-3EL"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="overlay" destination="K1t-5p-O4a" id="Dqk-bd-kpU"/>
                                     <outlet property="storyBackgroundImg" destination="2gG-xP-Y8C" id="mij-Pt-F0J"/>
                                 </connections>
                             </tableViewCell>
@@ -852,20 +841,29 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b85-44-dJF">
                                 <rect key="frame" x="0.0" y="20" width="600" height="226"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kgY-Gj-UEU">
-                                <rect key="frame" x="20" y="176" width="60" height="60"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eZ-Tm-wEf">
+                                <rect key="frame" x="15" y="181" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="4nD-F3-Seo"/>
-                                    <constraint firstAttribute="width" constant="60" id="Jcy-Zz-Uyl"/>
+                                    <constraint firstAttribute="height" constant="50" id="5Dg-HU-rQZ"/>
+                                    <constraint firstAttribute="width" constant="50" id="jak-PJ-Oa3"/>
                                 </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Save for Home Button.png" translatesAutoresizingMaskIntoConstraints="NO" id="Sy8-wY-GU8">
-                                <rect key="frame" x="520" y="176" width="60" height="60"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2u1-rU-GGh">
+                                <rect key="frame" x="535" y="181" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="60" id="8BI-i8-4BN"/>
-                                    <constraint firstAttribute="height" constant="60" id="wGN-KW-bjc"/>
+                                    <constraint firstAttribute="width" constant="50" id="8WK-8B-YFT"/>
+                                    <constraint firstAttribute="height" constant="50" id="bvf-rM-jKi"/>
                                 </constraints>
-                            </imageView>
+                                <state key="normal" title="Button" image="Save For Home Button.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="savePoi:" destination="R7p-xw-NKv" eventType="touchUpInside" id="VKU-Dp-apB"/>
+                                </connections>
+                            </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLW-fz-lUh">
                                 <rect key="frame" x="16" y="256" width="568" height="300"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -877,7 +875,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lkT-EM-yLV">
-                                <rect key="frame" x="16" y="20" width="568" height="536"/>
+                                <rect key="frame" x="82" y="-2" width="58" height="91"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -885,7 +883,7 @@
                             <constraint firstItem="jns-8U-vqO" firstAttribute="top" secondItem="lkT-EM-yLV" secondAttribute="bottom" id="2GI-wP-oLS"/>
                             <constraint firstItem="lkT-EM-yLV" firstAttribute="leading" secondItem="Tmm-BH-rkz" secondAttribute="leadingMargin" id="3a1-Yz-TeN"/>
                             <constraint firstItem="aLW-fz-lUh" firstAttribute="leading" secondItem="b85-44-dJF" secondAttribute="trailing" constant="-584" id="3v1-hx-xiW"/>
-                            <constraint firstItem="Sy8-wY-GU8" firstAttribute="bottom" secondItem="b85-44-dJF" secondAttribute="bottom" constant="-10" id="5at-mf-cTG"/>
+                            <constraint firstItem="2eZ-Tm-wEf" firstAttribute="bottom" secondItem="b85-44-dJF" secondAttribute="bottom" constant="-15" id="5JP-NH-XGS"/>
                             <constraint firstItem="lkT-EM-yLV" firstAttribute="top" secondItem="5xx-dS-ZVL" secondAttribute="bottom" id="5az-PF-Q8i"/>
                             <constraint firstItem="aLW-fz-lUh" firstAttribute="top" secondItem="b85-44-dJF" secondAttribute="bottom" constant="10" id="5ed-p7-neo"/>
                             <constraint firstItem="aLW-fz-lUh" firstAttribute="leading" secondItem="Tmm-BH-rkz" secondAttribute="leadingMargin" id="77u-Ag-Q69"/>
@@ -895,14 +893,12 @@
                             <constraint firstItem="jns-8U-vqO" firstAttribute="top" secondItem="aLW-fz-lUh" secondAttribute="bottom" id="Aae-J5-bNH"/>
                             <constraint firstItem="b85-44-dJF" firstAttribute="top" secondItem="5xx-dS-ZVL" secondAttribute="bottom" id="AkA-zR-ZyJ"/>
                             <constraint firstItem="lkT-EM-yLV" firstAttribute="top" secondItem="5xx-dS-ZVL" secondAttribute="bottom" id="MvZ-9a-nz2"/>
-                            <constraint firstItem="lkT-EM-yLV" firstAttribute="leading" secondItem="kgY-Gj-UEU" secondAttribute="trailing" id="XJr-Qf-dpZ"/>
+                            <constraint firstItem="b85-44-dJF" firstAttribute="leading" secondItem="2eZ-Tm-wEf" secondAttribute="leading" constant="-15" id="NuW-pM-EHe"/>
                             <constraint firstItem="b85-44-dJF" firstAttribute="leading" secondItem="Tmm-BH-rkz" secondAttribute="leadingMargin" constant="-16" id="d5Z-Sp-XFv"/>
+                            <constraint firstItem="2u1-rU-GGh" firstAttribute="bottom" secondItem="b85-44-dJF" secondAttribute="bottom" constant="-15" id="eu3-KA-P3g"/>
                             <constraint firstAttribute="trailingMargin" secondItem="b85-44-dJF" secondAttribute="trailing" constant="-16" id="fZh-oi-3YQ"/>
-                            <constraint firstItem="Sy8-wY-GU8" firstAttribute="leading" secondItem="lkT-EM-yLV" secondAttribute="trailing" id="i7M-Zk-otl"/>
-                            <constraint firstItem="b85-44-dJF" firstAttribute="leading" secondItem="kgY-Gj-UEU" secondAttribute="leading" constant="-20" id="m3X-PZ-T5y"/>
-                            <constraint firstItem="kgY-Gj-UEU" firstAttribute="bottom" secondItem="b85-44-dJF" secondAttribute="bottom" constant="-10" id="taz-29-uKW"/>
+                            <constraint firstItem="2u1-rU-GGh" firstAttribute="trailing" secondItem="b85-44-dJF" secondAttribute="trailing" constant="-15" id="m8H-I2-RI9"/>
                             <constraint firstItem="jns-8U-vqO" firstAttribute="top" secondItem="lkT-EM-yLV" secondAttribute="bottom" id="wha-sh-YML"/>
-                            <constraint firstItem="Sy8-wY-GU8" firstAttribute="trailing" secondItem="b85-44-dJF" secondAttribute="trailing" constant="-20" id="z7W-Ra-Gxw"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -910,8 +906,6 @@
                                 <exclude reference="5az-PF-Q8i"/>
                                 <exclude reference="7uz-kX-qBx"/>
                                 <exclude reference="MvZ-9a-nz2"/>
-                                <exclude reference="XJr-Qf-dpZ"/>
-                                <exclude reference="i7M-Zk-otl"/>
                                 <exclude reference="2GI-wP-oLS"/>
                                 <exclude reference="wha-sh-YML"/>
                             </mask>
@@ -944,7 +938,7 @@
     </scenes>
     <resources>
         <image name="Compass.png" width="401" height="401"/>
-        <image name="Save for Home Button.png" width="201" height="200"/>
+        <image name="Save For Home Button.png" width="201" height="200"/>
         <image name="back" width="44" height="44"/>
         <image name="compass" width="44" height="44"/>
         <image name="hamburger" width="44" height="44"/>
